2006-01-28  Ankit Jain  <jankit@novell.com>

	* MethodDef.cs:
	* TypeManager.cs:
	* MethodPointerTypeRef.cs:
	* ExternMethodRef.cs: Remove unused variables to fix warnings.

2006-01-28  Ankit Jain  <jankit@novell.com>

	* TypeDef.cs (GenericInfo):
	* MethodDef.cs (GenericInfo): Remove (unused).

2006-01-23  Ankit Jain  <jankit@novell.com>

	* TypeDef.cs (TypeDef.AddFieldDef): Throw exception if duplicate field being
	added.

2006-01-19  Ankit Jain  <jankit@novell.com>

	* Module.cs (Module): New. Class for representing this module.
	* CodeGen.cs (CodeGen): Update to use the new Module class.
	(CodeGen.Write): Resolve this_module.

2006-01-19  Ankit Jain  <jankit@novell.com>

	* GenericParameters.cs (GenericParameter): Implement ICustomAttrTarget.
	(GenericParameter.Resolve): New overload, reduce code duplication.
	(GenericParameters.GetGenericParam): New. Returns a GenericParameter.
	(GenericParameters.GetGenericParamNum): Update to use new GetGenericParam.

	* TypeDef.cs (TypeDef.GetGenericParam): New. Two overloads for id and index.
	* MethodDef.cs (MethodDef.GetGenericParam): Likewise.

2006-01-19  Ankit Jain  <jankit@novell.com>

	* MethodRef.cs (MethodRef.Resolve): Resolve owner.

2006-01-16  Ankit Jain  <jankit@novell.com>

	* TypeDef.cs (TypeDef.IComparable): Implement IComparable interface.
	* TypeManager.cs (TypeManager.DefineAll): Sort type_table before Define()'ing.

2006-01-16  Ankit Jain  <jankit@novell.com>

	* TypeRef.cs (TypeRef.CreateMethodRef): Return a TypeSpecMethodRef if
	this is a modified (eg. []) type.	

2006-01-16  Ankit Jain  <jankit@novell.com>

	* BaseTypeRef.cs (BaseTypeRef.Resolve): Make this abstract.
	(BaseTypeRef.CreateMethodRef):
	(BaseTypeRef.CreateFieldRef): Make protected and abstract.
	* BaseClassRef.cs (BaseClassRef.Clone): Make this abstract.
	Update all derived classes.
	* PrimitiveTypeRef.cs (PrimitiveTypeRef.CreateMethodRef):
	* GenericTypeInst.cs (GenericTypeInst.CreateMethodRef): Implement, but throw