@@ -1,3 +1,7 @@
+2006-01-31  Ankit Jain  <jankit@novell.com>
+
+	* test-assembly2.il: New. Test for referencing undeclared external assembly.
+
 2006-01-23  Ankit Jain  <jankit@novell.com>
 
 	* err-*.il, test-perm_fail*.il: Move negative tests from here to errors/ .
