@@ -1,3 +1,8 @@
+2006-01-31  Ankit Jain  <jankit@novell.com>
+
+	* ExternTable.cs (ExternTable.GetTypeRef): If type is from an 
+	undeclared assembly, then add reference to the assembly.
+
 2006-01-28  Ankit Jain  <jankit@novell.com>
 
 	* MethodDef.cs:
